cambios de titulo

--- a/IndicadoresFreyman/Web.config
+++ b/IndicadoresFreyman/Web.config
@@ -15,6 +15,7 @@
         <add tagPrefix="telerik" namespace="Telerik.Web.UI" assembly="Telerik.Web.UI" />
       </controls>
     </pages>
+	  <sessionState cookieless="AutoDetect" timeout="70" />
   </system.web>
   <system.webServer>
     <handlers>
