seleccionar items combo

--- a/IndicadoresFreyman/Web.config
+++ b/IndicadoresFreyman/Web.config
@@ -8,6 +8,7 @@
     <add name="IndicadorConnectionString" connectionString="Data Source=192.168.0.76;Initial Catalog=Indicadores;User ID=sa;Password=similares*3" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+	 <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <pages>
